# minutils

./: .gitignore  CMakeLists.txt  README.md  basename.cpp  cat.cpp  chmod.cpp  cp.cpp  diff.cpp  dirname.cpp  echo.cpp  env.cpp  head.cpp  ln.cpp  mkdir.cpp  nproc.cpp  pwd.cpp  rm.cpp  shuf.cpp  tac.cpp  tail.cpp  touch.cpp  wc.cpp  yes.cpp
.github/workflows/: ubuntu.yml  windows.yml
